@@ -1,1 +1,95 @@
 # IF2211_TK1_18222130
+
+## Description
+This program is a solver for IQ Puzzler Pro puzzles using Brute Force and Backtracking algorithm. It was developed as part of the IF2211 Algorithm Strategies course assignment (Tugas Kecil 1). The program provides a graphical user interface to load puzzle configurations, solve them, and visualize the solutions in 3D.
+
+## Features
+- 3D visualization of puzzle solutions
+- Interactive camera controls (rotate, zoom)
+- Solution saving in both text and image formats
+- Progress indicator during solving
+- Detailed statistics (solving time, iterations)
+
+## Requirements
+1. Java Development Kit (JDK) 17 or higher
+2. JavaFX SDK 17 or higher
+3. Maven (for dependency management)
+
+## Installation
+1. Clone this repository:
+```bash
+git clone https://github.com/yourusername/IF2211_TK1_18222130.git
+```
+
+2. Ensure you have JDK 17+ installed:
+```bash
+java --version
+```
+
+3. Install JavaFX SDK if not already installed:
+- Download from: https://gluonhq.com/products/javafx/
+- Add JavaFX lib directory to your system PATH
+
+## How to Compile
+1. Navigate to the project directory:
+```bash
+cd IF2211_TK1_18222130
+```
+
+2. Compile the project:
+```bash
+javac --module-path /path/to/javafx-sdk/lib --add-modules javafx.controls,javafx.graphics,javafx.base src/module-info.java src/Main.java src/puzzle/Block.java src/puzzle/Board.java src/puzzle/Solver.java src/file/Reader.java src/file/Writer.java
+```
+
+## How to Run
+1. Run the program:
+```bash
+java --module-path /path/to/javafx-sdk/lib --add-modules javafx.controls,javafx.graphics,javafx.base,javafx.swing -cp bin main.Main
+```
+
+2. Using the Program:
+   - Enter the puzzle input filename in the text field
+   - Click "Load & Solve" to process the puzzle
+   - Use mouse to rotate the 3D view
+   - Use scroll wheel to zoom in/out
+   - Click "Save Solution" to save the result
+   - Click "Reset View" to reset camera position
+
+## Input Format
+The program accepts text files with the following format:
+1. First line: puzzle dimensions (rows columns)
+2. Second line: puzzle type (DEFAULT/CUSTOM)
+3. Following lines: puzzle blocks configuration
+
+Example input file:
+```
+5 5 7
+DEFAULT
+A
+AA
+B
+BB
+C
+CC
+D
+DD
+EE
+EE
+E
+FF
+FF
+F
+GGG
+```
+
+## Author
+Bryan P. Hutagalung (18222130)  
+Information System and Techhnology 
+Bandung Institute of Technology
+2024
+
+## Course Information
+IF2211 Algorithm Strategies  
+Informatics Engineering
+School of Electrical Engineering and Informatics  
+Bandung Institute of Technology
